Added basic Graphic and checkins is now changing colors when they are open and closed

--- a/LuggageSortingPlant_V2.00/LuggageSortingPlant_V2.00.csproj
+++ b/LuggageSortingPlant_V2.00/LuggageSortingPlant_V2.00.csproj
@@ -8,7 +8,25 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="images\hall.jpg" />
+    <None Remove="images\plain.png" />
+    <None Remove="images\SortingUnit.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Bogus" Version="33.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="images\hall.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="images\plain.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="images\sortingUnit.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
 </Project>
